*******************************************************************************
                          CloverETL Engine - HISTORY of RELEASES
*******************************************************************************

REL 3-3-0-M1
------------
+ Introducing MS Access and Generic ODBC
- Improved log messages in readers and Aggregate
- CTL2: fixed datediff() function to work with milliseconds
- FastSort: Fixed rare synchronization problem during long runs causing a deadlock
- UniversalDataReader: fixed buffer size problems when verbose mode is on with big records
- UniversalDataReader/Writer, ComplexDataReader and ParallelReader: Explicit Quoted string and Quote character have now higher priority than setting these values in metadata (i.e. can now be properly overridden in component setting)
- Analyzedb.bat: Paths to Clover-bundled JDBC drivers are now properly set
- UniversalDataWriter and partitioned output – locking of file pattern is now more fine grained so that multiple graphs can run at the same time


REL 3-2-1
---------

REL 3-2-0
---------
* Introduction of dynamic edge buffers
+ Field Labels


REL 3-1-2
---------


REL 3-1-0
---------
* New component ComplexDataReader (commercial only)
	- for reading structured and unstructured flat files
	- similar to MultiLevelReader, yet more powerful and user-friendly
* Redesigned component XMLWriter (EXT_XML_WRITER)
	- brand new mapping (incompatible)
	- old XMLWriter still available as a deprecated component
	- supports disk caching for large amounts of data
* XMLExtract improvements
	- automatic data denormalization
	- metadata creation out of XMLExtract dialog
	- ability to add ports and assign metadata
	- annotations
	- improved error reporting
* AddressDoctor component (commercial only)
* Lotus Notes Domino Reader/Writer/metadata extract (commercial only)
* New component EmailReader (commercial only)
* New CTL2 functions - xml2json() and json2xml()
* Support for WebDAV and Amazon S3 protocols